# idfm_proxy

./: Cargo.toml  readme.md
src/: central_dispatch.rs  gtfs_fetcher.rs  lib.rs  main.rs  messages.rs  objects.rs  routes.rs  session_actor.rs  siri_stuff.rs  status.rs  templates.rs
src/actors/: central_dispatch.rs  data_store.rs  gtfs_fetcher.rs  mod.rs  siri_fetcher.rs  templates.rs  websocket.rs
static/css/: style.css
static/data/: referentiel-des-lignes.csv
templates/: base.html  estimated_call.html  index.html  line.html  line_index.html  line_list.html  line_not_found.html  vj_summary.html
