[package]
name = "idfm_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
actix-web = "4"
tokio = "1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
siri-lite = {path = "../siri-lite"}
serde = "1"
serde_json = "1"
askama="*"
askama_actix="*"
actix-web-actors="*"
actix="*"
