[package]
name = "idfm_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = "1"
chrono = "0.4"
chrono-tz = "*"
reqwest = { version = "0.11", features = ["json", "gzip"] }
siri-lite = { git = "https://github.com/rust-transit/siri-lite.git", branch = "estimated_timetable" }
#siri-lite = { path = "../siri-lite" }
serde = "1"
serde_json = "1"
tera="1"
actix-web-actors="*"
actix="*"
actix-files="*"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
csv = "1.1"
itertools = "0.10"
lazy_static = "*"
gtfs-structures = "*"
